--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "botkit": "^0.6.19",
+    "botkit": "^0.7.0",
     "debug": "^2.6.0",
     "express": "^4.14.0",
     "node-env-file": "^0.1.8",
     "request": "^2.79.0",
     "wordfilter": "^0.2.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/howdyai/botkit-starter-facebook.git"
