add db and user profile data

--- a/.env
+++ b/.env
@@ -11,4 +11,5 @@ verify_token=mysecrettoken
 studio_token=
 PORT=
 BESTBUY_TOKEN=TGp7jkZIbKOzfRTDzkofjo2O
+MONGO_URI=mongodb+srv://ChatbotsStudio:1234567890@bottest-ly5he.mongodb.net/test?retryWrites=true
 # note: .env is a shell file so there can’t be spaces around =
