--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "await-to-js": "^2.1.1",
+    "axios": "^0.18.0",
     "bestbuy": "^2.1.3",
     "body-parser": "^1.15.2",
     "botkit": "^0.7.0",
     "debug": "^2.6.0",
+    "dotenv": "^6.2.0",
     "express": "^4.14.0",
+    "mongoose": "^5.4.6",
     "node-env-file": "^0.1.8",
-    "request": "^2.79.0",
+    "request": "^2.88.0",
     "wordfilter": "^0.2.6"
   },
   "devDependencies": {
